# c1

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: audio.c  cam.c  common.h  geom.h  gfx.c  gool.c  gool.h  level.c  level.h  main.c  math.c  midi.c  midi.h  misc.c  ns.c  ns.h  pad.h  pbak.c  pbak.h  ptr.c  ptr.h  solid.c  title.c  title.h
src/ext/: disgool.c  disgool.h  refl.c  refl.h
src/ext/lib/: refl.h
src/formats/: cvtx.h  gool.h  imag.h  ipal.h  mdat.h  pbak.h  slst.h  svtx.h  tgeo.h  wgeo.h  zdat.h
src/pc/: init.c  math.c  math.h  pad.c  pad.h  time.c  time.h
src/pc/gfx/: gl.c  gl.h  pcgfx.h  soft.c  soft.h  tex.c  tex.h
src/pc/sound/: audio.h  midi.c  midi.h  util.h
src/pc/sound/formats/: psx.h  smf.h
src/psx/: card.c  card.h  cdr.h  gpu.c  gpu.h  init.c  r3000a.c  r3000a.h
